[gd_scene load_steps=17 format=2]

[ext_resource path="res://OrangeEnemy.gd" type="Script" id=1]
[ext_resource path="res://OnFootAssets/Hitboxes-Hurtboxes/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://OnFootAssets/Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=3]
[ext_resource path="res://OnFootAssets/Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://OnFootAssets/Enemies/Orange/Orange.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Burst"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 1.2, 1.4, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 10 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 10 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Burst"
length = 1.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 17, 18, 15 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 15 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Attack"
length = 1.7
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 1.4, 1.5, 1.6, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_ended"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "Harvest"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("Body:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.8, 0.8 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "completed_harvest"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "Idle"
length = 3.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 0.9, 2.5, 2.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1, 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 3.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "agg_animation_ended"
} ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="CapsuleShape2D" id=9]
radius = 8.0
height = 44.0

[sub_resource type="CapsuleShape2D" id=10]
radius = 11.0
height = 28.0

[sub_resource type="CircleShape2D" id=11]
radius = 190.168

[node name="OrangeEnemy" type="KinematicBody2D"]
scale = Vector2( 0.4, 0.4 )
collision_layer = 17
script = ExtResource( 1 )

[node name="Body" type="Sprite" parent="."]
texture = ExtResource( 5 )
offset = Vector2( 0, -37 )
hframes = 10
vframes = 2

[node name="BaseL" type="Sprite" parent="Body"]
texture = ExtResource( 5 )
offset = Vector2( 0, -37 )
hframes = 10
vframes = 2
frame = 10

[node name="BaseLAnimator" type="AnimationPlayer" parent="Body/BaseL"]
anims/Burst = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="DeathTween" type="Tween" parent="Body"]

[node name="BaseR" type="Sprite" parent="Body"]
texture = ExtResource( 5 )
offset = Vector2( 0, -37 )
hframes = 10
vframes = 2
frame = 15

[node name="BaseRAnimator" type="AnimationPlayer" parent="Body/BaseR"]
anims/Burst = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 5 )
anims/Harvest = SubResource( 6 )
anims/Idle = SubResource( 7 )
anims/RESET = SubResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -9 )
rotation = 1.5708
shape = SubResource( 9 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -10 )
rotation = 1.5708
shape = SubResource( 10 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 3 )]
visible = false

[node name="DetectionArea" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 11 )

[node name="AttackCountdown" type="Timer" parent="."]
one_shot = true

[node name="Stats" parent="." instance=ExtResource( 4 )]
harvest_duration = 6
max_health = 8

[node name="SplurtCountdown" type="Timer" parent="."]

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="AttackCountdown" to="." method="_on_AttackCountdown_timeout"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="SplurtCountdown" to="." method="_on_SplurtCountdown_timeout"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
